# ozeecubed

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml
core/src/: lib.rs
core/src/oscilloscope/: mod.rs
docs/: index.html
docs/ozeecubed/pkg/: ozeecubed_wasm.js  ozeecubed_wasm_bg.wasm
gui/: Cargo.toml
gui-v2/: Cargo.toml  README.md
gui-v2/src/: main.rs  state.rs  window.rs
gui-v2/src/renderer/: mod.rs  waveform.rs
gui-v2/src/shaders/: waveform.wgsl
gui/src/: main.rs
gui/src/ui/: controls.rs  mod.rs  spectrum.rs
src/: lib.rs  main.rs
src/audio/: capture.rs  mod.rs
src/oscilloscope/: mod.rs  trigger.rs  waveform.rs
src/ui/: controls.rs  mod.rs  spectrum.rs
tests/: integration_tests.rs
wasm/: Cargo.toml  build.sh  index.html
wasm/src/: audio.rs  lib.rs  webgl.rs
